# VAST

./: .gitignore  CMakeLists.txt  INSTRUCTIONS.md  README.md  exp.txt  requirements.txt
configs/: datasets.yaml  experiments.yaml  hosts.example.yaml
deploy/custom_cpp_cuda_qt/: adaptive_scheduler_app.cpp  adaptive_scheduler_app.cu
deploy/gstreamer_adaptivescheduler/: gstadaptivescheduler.c
deploy/native_gst_probe/: Dockerfile.deepstream  Dockerfile.savant  vast_native_gst_probe.cpp
deploy/savant/: canonical_distributed_module.yml  canonical_heterogeneous_module.yml  module.yml  native_probe.py
docs/: DATASETS.md  NATIVE_ADAPTERS.md
policies/: ql_heft_frozen.policy  ql_heft_frozen.policy.sha256
scripts/: analyze_results.py  benchmark_adapters.py  benchmark_contract.py  build_native_probe_images.sh  check_dataset.py  check_system.py  collect_metrics.py  custom_app_emitter.py  distributed_executor.py  emit_runtime_frames_csv.py  generate_vast_report_artifacts.py  install_openvino_dlstreamer.sh  prepare_assets.sh  prepare_benchmark_dataset.py  rtp_trace.py  run_experiments.py  run_openvino_container_chunks.py  run_system_template.sh  setup_target.py  setup_target.sh  setup_target_windows.ps1  train_ql_heft.py  validate_strict_telemetry_fix.py  vast_gui.py  workload_stub.py
tests/: test_benchmark_contract.py  test_prepare_benchmark_dataset.py  test_run_experiments_resume.py  test_scenario_planning.py  test_strict_validation.py  test_vast_gui.py
web/: app.js  index.html  styles.css
